<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derived_app_name" translatable="false">Neo Launcher</string>
    <string name="app_version" translatable="false">Version</string>
    <string name="app_build" translatable="false">Build</string>
    <string name="app_id" translatable="false">Package</string>
    <string name="default_folder_name">New Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="hotseat_prediction_content_description">Predicted app: <xliff:g id="title" example="Chrome">%1$s</xliff:g></string>
    <string name="hotseat_tip_gaps_filled">App suggestions added to empty space</string>
    <string name="title_app_suggestions">App suggestions</string>
    <string name="title__general_about">About</string>
    <string name="title__general_desktop">Desktop</string>
    <string name="title_general_folder">Folder</string>
    <string name="title__general_dock">Dock</string>
    <string name="title__general_drawer">Drawer</string>
    <string name="title__general_theme">Theme</string>
    <string name="title__general_smartspace">Home Widget</string>
    <string name="title__general_advanced">Advanced Settings</string>
    <string name="title__general_notifications">Gestures and Notifications</string>
    <string name="title__general_profile">Profile</string>
    <string name="title__general_gestures_dash">Gestures &amp; Dash</string>
    <string name="title__general_search_feed">Search &amp; Feed</string>
    <string name="title__general_widgets_notifications">Widgets &amp; Notifications</string>
    <string name="summary__general_desktop">Customize your desktop</string>
    <string name="summary__general_dock">Hotseat icons, search bar</string>
    <string name="summary__general_drawer">Customize your drawer</string>
    <string name="summary__general_theme">Change colors, icon pack, icon shape</string>
    <string name="summary__general_search">Search Provider, style, icons</string>
    <string name="summary__general_smartspace">Date, time, home widget</string>
    <string name="summary__general_notifications">Badge count, badge color, gestures</string>
    <string name="pref_category__interfaces">User Interface</string>
    <string name="pref_category__features">Features</string>
    <string name="pref_category__inputs">Gestures and Search</string>
    <string name="pref_category__others">Others</string>
    <string name="pref_category__incubating">Incubating</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="title_desktop_full_width_widgets">Full width widgets</string>
    <string name="title_desktop_widget_corner_radius">Widget corner radius</string>
    <string name="title__desktop_icon_size">Icon size</string>
    <string name="title__desktop_grid_size">Grid size</string>
    <string name="title__desktop_hide_icon_labels">Hide icon labels on home screen</string>
    <string name="title_desktop_overlap_placement">Allow overlapping widgets</string>
    <string name="title_desktop_lock_desktop">Lock Desktop</string>
    <string name="title_desktop_keep_empty">Allow Empty Pages</string>
    <string name="title__multiline_labels">Multiline app names</string>
    <string name="title_desktop_free_scrolling">Free Scrolling</string>
    <string name="title_desktop_cycle_scrolling">Cycle Scrolling</string>
    <string name="title_popup_menu_open">Open Popup Menu</string>
    <string name="title_desktop_icon_popup_menu">Popup menu items</string>
    <string name="title_desktop_hide_statusbar">Hide status bar</string>
    <string name="title_desktop_text_size">Text Size</string>
    <string name="summary_full_width_widgets">Allow widgets to span over the whole width without padding</string>
    <string name="grid_size_height">Height</string>
    <string name="grid_size_width">Width</string>
    <string name="show_top_shadow">Show Top Shadow</string>
    <string name="set_as_home_screen">Set as Home Screen</string>
    <string name="default_home_screen">Home Screen</string>
    <string name="home_screen_set_toast">Home screen set</string>
    <string name="remove_page">Remove Page</string>
    <string name="move_page_left">Move page left</string>
    <string name="move_page_right">Move page right</string>
    <string name="folder_icon_shape">Folder icon shape</string>
    <string name="pref_title_folder">Customize Folders</string>
    <string name="pref_title_general">General</string>
    <string name="folder_custom_background">Use custom folder background</string>
    <string name="folder_draw_stroke">Draw Folder Stroke</string>
    <string name="folder_background">Folder background color</string>
    <string name="folder_stroke_color">Folder stroke color</string>
    <string name="folder_radius">Folder corner radius</string>
    <string name="folder_full_screen">Open folder in full screen</string>
    <string name="folder_rows">Folder Rows</string>
    <string name="folder_columns">Folder Columns</string>
    <string name="folder_opacity">Folder Icon Opacity</string>
    <string name="title__dock_icon_size_enforce">Enforce custom icon size</string>
    <string name="title__dock_icon_size">Icon size</string>
    <string name="title__dock_scale">Dock scale</string>
    <string name="title_dock_bottom_padding">Dock bottom padding</string>
    <string name="title_dock_fill">Show Background</string>
    <string name="title_dock_background_color">Background Color</string>
    <string name="title_dock_two_row">Show Second Row</string>
    <string name="title__dock_hide">Dock Enabled</string>
    <string name="title_expandable_dock">Expandable Dock</string>
    <string name="title__dock_hide_labels">Hide Labels</string>
    <string name="title__dock_colored_icons">Colored icons</string>
    <string name="title__dock_hotseat_icons">Icon Count</string>
    <string name="title__dock_show_arrow">Show Arrow</string>
    <string name="dock_colored_google">Color Icons</string>
    <string name="title_opacity">Opacity</string>
    <string name="hotseat_show_page_indicator">Show Page Indicator</string>
    <string name="hotseat_show_dots_page_indicator">Show Dots Page Indicator Instead of Lines</string>
    <string name="title_disabled">Off</string>
    <string name="dock_search_value" translatable="false">%1$s %2$s</string>
    <string name="num_hotseat_icons_pref_title">Icon Count</string>
    <string name="title_dock_search">Dock search bar</string>
    <string name="summary_dock_search">Show in the bottom dock</string>
    <string name="label_search">Search</string>
    <string name="cat_dock_search">Drawer and dock</string>
    <string name="label_lens" translatable="false">Google Lens</string>
    <string name="title__drawer_sort">Apps Sort</string>
    <string name="title_drawer_all_apps">All</string>
    <string name="title__drawer_all_apps">Show "All Apps" label</string>
    <string name="title_separate_work_apps">Second Tab for Work Apps</string>
    <string name="title__drawer_paged_apps">Paged Apps view</string>
    <string name="title__drawer_hide_icon_labels">Hide app names</string>
    <string name="title__drawer_hide_apps">Hidden App Shortcuts</string>
    <string name="title__drawer_icon_size">All Apps Icon Size</string>
    <string name="title__drawer_categorization">Categories</string>
    <string name="title__drawer_icon_popup_menu">Shortcut Bubble</string>
    <string name="title__drawer_columns">Number of columns</string>
    <string name="title__drawer_rows">Number of rows</string>
    <string name="title_drawer_enable_background">Use custom background color</string>
    <string name="title_drawer_row_height">Row height</string>
    <string name="title__sort_mode">App Sorting</string>
    <string name="title__sort_alphabetical_az">A→Z</string>
    <string name="title__sort_alphabetical_za">Z→A</string>
    <string name="title__sort_last_installed">Last Installed</string>
    <string name="title__sort_most_used">Most Used</string>
    <string name="title__sort_by_color">By Color</string>
    <string name="title_all_apps_search">Drawer search bar</string>
    <string name="title_all_apps_google_search">Web results</string>
    <string name="title_all_apps_keep_scroll_state">Remember Position</string>
    <string name="title_all_apps_hide_scrollbar">Hide Scrollbar</string>
    <string name="title_search_hidden_apps">Find hidden apps</string>
    <string name="title_fuzzy_search">Fuzzy Search</string>
    <string name="summary_fuzzy_search">Approximate matching for app searches.</string>
    <string name="title_manage_tabs">Manage Tabs</string>
    <string name="title_enable_folders">Enable folders in drawer</string>
    <string name="title_manage_folders">Manage Folders</string>
    <string name="summary_manage_tabs">Create or edit Tabs</string>
    <string name="summary_manage_folders">Tap to create or edit folders</string>
    <string name="summary_search_hidden_apps">Show hidden shortcuts in results.</string>
    <string name="summary_all_apps_google_search">Find web results and apps</string>
    <string name="summary__drawer_hide_apps">Hide app from the app drawer</string>
    <string name="summary_app_categorization_enable">Create tabs or folders</string>
    <string name="summary_app_suggestions">For all apps and Home screen</string>
    <string name="title_disable_suggestions_prompt">Turn off app suggestions</string>
    <string name="msg_disable_suggestions_prompt">"Usage data will be deleted."</string>
    <string name="label_turn_off_suggestions">Disable</string>
    <string name="title_text_color">Text Color</string>
    <string name="title_drawer_layout">Layout Mode</string>
    <string name="title_drawer_layout_categories">Manage Categories</string>
    <string name="title_drawer_vertical">Vertical</string>
    <string name="title_drawer_horizontal">Horizontal</string>
    <string name="title_drawer_categorized">Vertical Categories</string>
    <string name="title_drawer_tabs">Horizontal Tabs</string>
    <string name="title_drawer_paged">Paged</string>
    <string name="dialog_message_change_sort">Change to alphabetical app sorting?</string>
    <string name="cat_desktop_grid">Grid and Layout</string>
    <string name="cat_drawer_grid">Grid</string>
    <string name="cat_drawer_icons">Icons</string>
    <string name="pref_appcategorization_flowerpot_title">App Category</string>
    <string name="title_app_categorization_enable">Enable apps categories</string>
    <string name="pref_appcategorization_style_text">Style</string>
    <string name="app_categorization_folders">Folders</string>
    <string name="pref_appcategorization_folders_summary">Tap to open popup.</string>
    <string name="app_categorization_tabs">Tabs</string>
    <string name="pref_appcategorization_tabs_summary">Swipe between groups.</string>
    <string name="pref_app_groups_edit_tip">Tap to edit, drag to reorder.</string>
    <string name="tab_type_custom_desc">Pick shortcuts manually.</string>
    <string name="tab_type_smart">Automatic</string>
    <string name="pref_appcategorization_flowerpot_summary">Pick shortcuts automatically.</string>
    <string name="add_new_tab">Add</string>
    <string name="selected_count">%1$d selected</string>
    <string name="title_show_google_app">Show Google app</string>
    <string name="title_smartspace_feed_theme">Feed Theme</string>
    <string name="title_use_pill_qsb">Show Pill Search Shortcut</string>
    <string name="title_smartspace_time">Show Time</string>
    <string name="title_smartspace_date">Show Date</string>
    <string name="title_smartspace_time_above">Show Large Clock</string>
    <string name="smartspace_add_to_home">Add to Desktop</string>
    <string name="title_smartspace_time_24_h">24-Hour Format</string>
</resources>