<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 Omega Launcher
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.saggitt.omega.preferences.PreviewPreference
        android:key="pref_smartspace_preview"
        app:previewLayout="@layout/smartspace_preview" />

    <com.saggitt.omega.preferences.SmartspaceAddToHomePreference
        android:key="pref_smartspace_add_to_home"
        android:title="@string/smartspace_add_to_home"
        app:indexable="false"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreferenceCompat
        android:key="pref_smartspace_date"
        android:dependency="pref_use_pill_qsb"
        android:title="@string/title_smartspace_date"
        android:defaultValue="true"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreferenceCompat
        android:key="pref_smartspace_time"
        android:title="@string/title_smartspace_time"
        android:defaultValue="false"
        android:dependency="pref_use_pill_qsb"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreferenceCompat
        android:key="pref_smartspace_time_above"
        android:title="@string/title_smartspace_time_above"
        android:defaultValue="false"
        android:dependency="pref_smartspace_time"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreferenceCompat
        android:key="pref_smartspace_time_24_h"
        android:title="@string/title_smartspace_time_24_h"
        android:defaultValue="false"
        android:dependency="pref_smartspace_time"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:key="pref_use_pill_qsb"
        android:title="@string/title_use_pill_qsb"
        android:disableDependentsState="true"
        android:defaultValue="false"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_enable_minus_one"
        android:summary="@string/pref_show_google_now_summary"
        android:title="@string/title_show_google_app"
        app:controllerClass=".MinusOneController"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/feedThemes"
        android:entryValues="@array/feedThemeValues"
        android:key="pref_feed_theme"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/title_smartspace_feed_theme"
        android:dependency="pref_enable_minus_one"
        app:controllerClass=".GFeedBackgroundController"
        app:iconSpaceReserved="false" />
</PreferenceScreen>