<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 Omega Launcher
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="Drawer">

    <ListPreference
        android:defaultValue="3"
        android:disableDependentsState="false"
        android:entries="@array/entries__sort_mode"
        android:entryValues="@array/values__zero_to_four"
        android:key="pref_key__sort_mode"
        android:persistent="true"
        android:summary="%s"
        android:title="@string/title__drawer_sort"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="pref_hideAllAppsAppLabels"
        android:persistent="true"
        android:title="@string/title__drawer_hide_icon_labels"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:dependency="pref_hideAllAppsAppLabels"
        android:key="pref_iconLabelsInTwoLines"
        android:persistent="true"
        android:title="@string/title__drawer_mutliline_labels"
        app:iconSpaceReserved="false" />

    <!--
        <com.saggitt.omega.preferences.StyledSwitchPreference
            android:defaultValue="false"
            android:key="pref_show_predictions"
            android:title="@string/title_app_suggestions"
            app:iconSpaceReserved="false"
            app:searchTitle="@string/title_app_suggestions" />

            <com.saggitt.omega.preferences.StyledSwitchPreference
                android:key="pref_showAllAppsLabel"
                android:title="@string/title__drawer_all_apps"
                android:defaultValue="false"
                android:persistent="true"
                app:iconSpaceReserved="false"/> -->

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="false"
        android:dependency="pref_hideAllAppsAppLabels"
        android:disableDependentsState="true"
        android:key="pref_key__paged_drawer"
        android:persistent="true"
        android:title="@string/title__drawer_paged_apps"
        app:iconSpaceReserved="false" />

    <androidx.preference.Preference
        android:fragment="com.saggitt.omega.groups.ui.AppCategorizationFragment"
        android:key="pref_categorization"
        android:dependency="pref_key__paged_drawer"
        android:title="@string/title__drawer_categorization"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="true"
        android:key="pref_allAppsSearch"
        android:title="@string/title_all_apps_search"
        app:iconSpaceReserved="false" />

    <com.saggitt.omega.preferences.StyledSwitchPreference
        android:defaultValue="true"
        android:dependency="pref_allAppsSearch"
        android:disableDependentsState="true"
        android:key="pref_allAppsGoogleSearch"
        android:summary="@string/summary_all_apps_google_search"
        android:title="@string/title_all_apps_google_search"
        app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>